--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,29 @@
 SmallCLIRPG/SmallCLIRPG.vcxproj
 SmallCLIRPG/SmallCLIRPG.vcxproj.filters
 SmallCLIRPG/SmallCLIRPG.vcxproj.user
+.vs/SmallCLIRPG/FileContentIndex/05f038f1-bac1-4bee-aa6e-73d4d20c1bdf.vsidx
+.vs/SmallCLIRPG/FileContentIndex/40f7d306-4c1c-45fb-8dda-67587c83dcd0.vsidx
+*.vsidx
+*.db-shm
+*.db-wal
+*.opendb
+*.json
+*.ipch
+SmallCLIRPG/x64/Debug/player.obj
+SmallCLIRPG/x64/Debug/SmallCLIRPG.exe.recipe
+SmallCLIRPG/x64/Debug/SmallCLIRPG.ilk
+SmallCLIRPG/x64/Debug/SmallCLIRPG.log
+SmallCLIRPG/x64/Debug/SmallCLIRPG.obj
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/CL.command.1.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/Cl.items.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/CL.read.1.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/CL.write.1.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/link.command.1.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/link.read.1.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/link.secondary.1.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/link.write.1.tlog
+SmallCLIRPG/x64/Debug/SmallCLIRPG.tlog/SmallCLIRPG.lastbuildstate
+SmallCLIRPG/x64/Debug/vc143.idb
+SmallCLIRPG/x64/Debug/vc143.pdb
+x64/Debug/SmallCLIRPG.exe
+x64/Debug/SmallCLIRPG.pdb
