Finished basic loop
Solidified small loop, player with basic stats a basic attack function same for enemy and a small while loop, probably will be externalized into a different class  to handle battlefields later

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ SmallCLIRPG/x64/Debug/vc143.idb
 SmallCLIRPG/x64/Debug/vc143.pdb
 x64/Debug/SmallCLIRPG.exe
 x64/Debug/SmallCLIRPG.pdb
+.vs/SmallCLIRPG/v17/Solution.VC.db
+SmallCLIRPG/x64/Debug/enemy.obj
